--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ button:hover {
 </audio>
 
 <script>
-const PASSWORD = "PASSWORD_KAMU"; // GANTI PASSWORD
+const PASSWORD = "020225"; // GANTI PASSWORD
 
 function checkPassword() {
   const input = document.getElementById("password").value;
@@ -196,4 +196,5 @@ function startSlideshow() {
 </script>
 
 </body>
+
 </html>
