--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>Untuk si cantik anindya larasati</title>
+<title>Untuk si cantik Anindya Larasati</title>
 
-<!-- Google Fonts (Gen Z, modern, estetik) -->
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
 
 <style>
@@ -67,14 +66,12 @@ button:hover {
   opacity: 0.9;
 }
 
-/* Typing text */
 #typing {
   font-size: 16px;
   line-height: 1.6;
   min-height: 120px;
 }
 
-/* Photo slideshow */
 .photo-box {
   width: 100%;
   height: 300px;
@@ -92,40 +89,39 @@ button:hover {
 
 <body>
 
-<!-- PAGE 1 : PASSWORD -->
+<!-- PASSWORD -->
 <div class="container active" id="page-password">
   <h2>🔐 Masukkan Password</h2>
   <input type="password" id="password" placeholder="Password dulu ya">
-  <button onclick="checkPassword()">Masuk</button>
+  <button type="button" onclick="checkPassword()">Masuk</button>
 </div>
 
-<!-- PAGE 2 : WELCOME -->
+<!-- WELCOME -->
 <div class="container" id="page-welcome">
   <h1>Halo Cantikku 🤍</h1>
   <p>Selamat datang di sesuatu yang aku buat khusus untuk kamu</p>
-  <button onclick="nextPage('page-message')">Lanjut</button>
+  <button type="button" onclick="nextPage('page-message')">Lanjut</button>
 </div>
 
-<!-- PAGE 3 : MESSAGE -->
+<!-- MESSAGE -->
 <div class="container" id="page-message">
   <h2>🤍</h2>
   <p id="typing"></p>
-  <button id="nextAfterTyping" style="display:none" onclick="nextPage('page-photo')">
-    Lanjut
-  </button>
+  <button id="nextAfterTyping" style="display:none" type="button"
+    onclick="nextPage('page-photo')">Lanjut</button>
 </div>
 
-<!-- PAGE 4 : PHOTOS -->
+<!-- PHOTOS -->
 <div class="container" id="page-photo">
   <h2>📸</h2>
   <div class="photo-box">
-    <img id="slideshow" src="">
+    <img id="slideshow">
   </div>
 </div>
 
 <!-- MUSIC -->
 <audio id="music" loop>
-  <source src="https://raw.githubusercontent.com/4868hm7srm-commits/laguu/refs/heads/main/musik.mp3" type="audio/mpeg">
+  <source src="https://raw.githubusercontent.com/4868hm7srm-commits/laguu/main/musik.mp3" type="audio/mpeg">
 </audio>
 
 <script>
@@ -133,19 +129,11 @@ const PASSWORD = "AyasCantik";
 
 function checkPassword() {
   const input = document.getElementById("password").value.trim();
-
   if (input === PASSWORD) {
-    // pindah halaman DULU
     nextPage('page-welcome');
-
-    // musik diputar SETELAH interaksi
     setTimeout(() => {
-      const music = document.getElementById("music");
-      if (music) {
-        music.play().catch(() => {});
-      }
-    }, 500);
-
+      document.getElementById("music").play().catch(()=>{});
+    }, 300);
   } else {
     alert("Password salah 😢");
   }
@@ -154,15 +142,33 @@ function checkPassword() {
 function nextPage(id) {
   document.querySelectorAll('.container').forEach(c => c.classList.remove('active'));
   document.getElementById(id).classList.add('active');
-
   if (id === 'page-message') startTyping();
   if (id === 'page-photo') startSlideshow();
 }
 
-/* Typing Effect */
-const message = "Halo sayangku anindya larasati, dek, ga kerasa ya waktu cepat banget berjalan udah 2026 aja, ingat kan tahun lalu kemarin kita ngerayain tahun 2025 bareng bareng? tahun ini juga (2026) kita juga ngerayain ini bareng bareng, banyak banget hal hal yang udah kita lewatin sama sama, kita udah bahagia bareng, seneng bareng, ketawa bareng, dan bahkan kita udah ngerasain sakit bareng bareng, untuk di 2026 ini denis berharap semoga kita masih bersama dan selalu bersama untuk tahun tahun yang akan datang nantinya, denis minta maaf karena sudah pernah sakitin hati kamu ya sayang, tapi denis gapernah sekalipun berniatan untuk nyakitin kamu sedikitpun 🤍, denis sayang banget sama kamu dek, dan denis juga cinta banget sama kamu, sayang dan cintanya denis ke kamu lebih dari apa yang kamu tau 🤍. Semoga kita selalu menyayangin dan mencintain di saat kita senang maupun bahagia ya sayang 🤍.
+/* MESSAGE (FIXED) */
+const message = `Halo sayangku Anindya Larasati 🤍
 
-Iloveyoumorethananything 🤍";
+Dek, nggak kerasa ya waktu cepat banget berjalan, udah 2026 aja.
+Ingat kan tahun lalu kita ngerayain 2025 bareng-bareng?
+Tahun ini (2026) kita juga masih bisa ngerayain bareng 🤍
+
+Banyak banget hal yang sudah kita lewatin sama-sama.
+Kita bahagia bareng, seneng bareng, ketawa bareng,
+bahkan pernah ngerasain sakit bareng-bareng.
+
+Untuk tahun 2026 ini,
+Denis berharap semoga kita masih bersama
+dan selalu bersama di tahun-tahun selanjutnya 🤍
+
+Denis minta maaf kalau pernah nyakitin hati kamu ya sayang,
+tapi Denis nggak pernah sekalipun berniat nyakitin kamu 🤍
+
+Denis sayang banget sama kamu,
+dan cinta Denis ke kamu lebih dari apa yang kamu tahu 🤍
+
+I love you more than anything 🤍`;
+
 let index = 0;
 
 function startTyping() {
@@ -176,10 +182,10 @@ function startTyping() {
       clearInterval(interval);
       document.getElementById("nextAfterTyping").style.display = "inline-block";
     }
-  }, 50);
+  }, 40);
 }
 
-/* Slideshow */
+/* SLIDESHOW */
 const photos = [
   "https://raw.githubusercontent.com/4868hm7srm-commits/foto/84bfcfcd8f2e5c3f936a3e9cdddf91f839ffd132/foto1.jpg",
   "https://raw.githubusercontent.com/4868hm7srm-commits/foto/84bfcfcd8f2e5c3f936a3e9cdddf91f839ffd132/foto2.jpg",
@@ -206,8 +212,4 @@ function startSlideshow() {
 </script>
 
 </body>
-
 </html>
-
-
-
