--- a/index.html
+++ b/index.html
@@ -149,16 +149,23 @@ function nextPage(id) {
 // TYPING EFFECT
 const message = `Halo sayangku Anindya Larasati 🤍
 
-Ga kerasa ya waktu cepat banget berjalan.
-Kita sudah melewati banyak hal bersama,
-bahagia bareng, sedih bareng, dan kuat bareng.
+Dek, nggak kerasa ya waktu cepat banget berjalan, udah 2026 aja.
+Ingat kan tahun lalu kita ngerayain 2025 bareng-bareng?
+Tahun ini (2026) kita juga masih bisa ngerayain bareng 🤍
 
-Di tahun 2026 ini,
-aku berharap kita masih bersama
-dan terus bersama di tahun-tahun berikutnya.
+Banyak banget hal yang sudah kita lewatin sama-sama.
+Kita bahagia bareng, seneng bareng, ketawa bareng,
+bahkan pernah ngerasain sakit bareng-bareng.
 
-Maaf ya kalau aku pernah nyakitin hati kamu.
-Percaya ya, aku sayang dan cinta banget sama kamu 🤍
+Untuk tahun 2026 ini,
+Denis berharap semoga kita masih bersama
+dan selalu bersama di tahun-tahun selanjutnya 🤍
+
+Denis minta maaf kalau pernah nyakitin hati kamu ya sayang,
+tapi Denis nggak pernah sekalipun berniat nyakitin kamu 🤍
+
+Denis sayang banget sama kamu,
+dan cinta Denis ke kamu lebih dari apa yang kamu tahu 🤍
 
 I love you more than anything 🤍`;
 
@@ -209,3 +216,4 @@ function startSlideshow() {
 
 </body>
 </html>
+
