--- a/index.html
+++ b/index.html
@@ -151,21 +151,21 @@ const message = `Halo sayangku Anindya Larasati 🤍
 
 Dek, nggak kerasa ya waktu cepat banget berjalan, udah 2026 aja.
 Ingat kan tahun lalu kita ngerayain 2025 bareng-bareng?
-Tahun ini (2026) kita juga masih bisa ngerayain bareng 🤍
+Dan Alhamdulillahnya tahun ini (2026) kita juga masih bisa ngerayain tahun baru bareng 🤍
 
 Banyak banget hal yang sudah kita lewatin sama-sama.
 Kita bahagia bareng, seneng bareng, ketawa bareng,
 bahkan pernah ngerasain sakit bareng-bareng.
 
 Untuk tahun 2026 ini,
-Denis berharap semoga kita masih bersama
+Denis berharap semoga kita masih bersama dan bertahan lama selama lamanya,
 dan selalu bersama di tahun-tahun selanjutnya 🤍
 
 Denis minta maaf kalau pernah nyakitin hati kamu ya sayang,
 tapi Denis nggak pernah sekalipun berniat nyakitin kamu 🤍
 
-Denis sayang banget sama kamu,
-dan cinta Denis ke kamu lebih dari apa yang kamu tahu 🤍
+Denis sayang banget sama kamu, dan Denis cinta banget sama kamu dek,
+dan cintanya Denis ke kamu lebih dari apa yang kamu tahu 🤍
 
 I love you more than anything 🤍`;
 
@@ -216,4 +216,5 @@ function startSlideshow() {
 
 </body>
 </html>
+
 
