--- a/index.html
+++ b/index.html
@@ -157,6 +157,12 @@ Banyak banget hal yang sudah kita lewatin sama-sama.
 Kita bahagia bareng, seneng bareng, ketawa bareng,
 bahkan pernah ngerasain sakit bareng-bareng.
 
+Dek, bertemu kamu dan di cintain kamu itu hal yang sangat amat
+Denis banggain dan yang paling Denis syukurin, Denis beruntung
+banget sudah bertemu sama kamu di 7 Desember 2025 itu, Denis gapernah
+menyesal karna sudah bertemu kamu, kamu orang yang penting di hidup aku,
+aku sayang dan cinta sekali sama kamu Anindya Larasati 🤍
+
 Untuk tahun 2026 ini,
 Denis berharap semoga kita masih bersama dan bertahan lama selama lamanya,
 dan selalu bersama di tahun-tahun selanjutnya 🤍
@@ -216,5 +222,6 @@ function startSlideshow() {
 
 </body>
 </html>
+
 
 
